Make section padding more consistent across breakpoints, fix z-index press section for map pin, make margins consistent

--- a/Components/CTASection/style.module.scss
+++ b/Components/CTASection/style.module.scss
@@ -2,8 +2,11 @@
 
 .ctaSection {
   @include vars.grid-wrap();
-  padding: 120px vars.$one-twenty-fourth;
+  padding: 110px vars.$one-twenty-fourth;
   position: relative;
+  @include vars.x-small {
+    padding: 90px vars.$one-twenty-fourth;
+  }
   .imageBackground {
     background-image: linear-gradient(
         to bottom,
@@ -22,7 +25,7 @@
     color: vars.$white;
     grid-column: 1 / 7;
     grid-row: 1;
-    margin-bottom: 75px;
+    margin-bottom: 80px;
     opacity: 0;
     transform: translateX(-100%);
     @include vars.small {
@@ -30,6 +33,7 @@
     }
     @include vars.tablet-and-lower {
       grid-column: 1/5;
+      margin-bottom: 50px;
     }
   }
   .ctaCopy {
