--- a/Components/ProjectsSection/Map/mapSection.module.scss
+++ b/Components/ProjectsSection/Map/mapSection.module.scss
@@ -11,7 +11,10 @@
     background-color: vars.$yellow;
     color: vars.$black;
     grid-column: 1/6;
-    padding: 100px vars.$one-twenty-fourth;
+    padding: 110px vars.$one-twenty-fourth;
+    @include vars.x-small {
+      padding: 90px vars.$one-twenty-fourth;
+    }
     @include vars.medium-and-lower {
       grid-column: 1/7;
     }
@@ -19,11 +22,10 @@
       grid-column: 1/3;
     }
     @include vars.ipad-and-lower-portrait {
-      padding: 80px vars.$one-twenty-fourth;
       grid-column: 1/5;
     }
     .headline {
-      margin-bottom: 45px;
+      margin-bottom: 50px;
       opacity: 0;
       transform: translateX(-100%);
     }
@@ -40,7 +42,7 @@
       grid-column: 3/5;
     }
     @include vars.ipad-and-lower-portrait {
-      min-height: 60vh;
+      height: 60vh;
       grid-column: 1/5;
       grid-row: 2;
     }
