--- a/Components/ProjectsSection/activeProject.module.scss
+++ b/Components/ProjectsSection/activeProject.module.scss
@@ -7,7 +7,10 @@
     color: vars.$white;
     padding: 160px vars.$one-twenty-fourth 50px;
     @include vars.tablet-and-lower {
-      padding: 100px vars.$one-twenty-fourth 50px;
+      padding: 110px vars.$one-twenty-fourth 50px;
+    }
+    @include vars.x-small {
+      padding: 90px vars.$one-twenty-fourth 50px;
     }
     .projectTitle {
       @include vars.eyebrow-font();
@@ -61,10 +64,10 @@
   .imagesContainer {
     @include vars.flexbox();
     @include vars.flex-direction(column);
-    padding: 40px;
+    padding: vars.$one-twenty-fourth;
     width: 100%;
     .secondaryImage {
-      margin-bottom: 40px;
+      margin-bottom: vars.$one-twenty-fourth;
       width: vars.$seven-twelfths;
       @include vars.mobile {
         min-width: 300px;
